--- a/movieLife/static/style.css
+++ b/movieLife/static/style.css
@@ -27,7 +27,7 @@ footer {
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
 
-.star-list li {
+.movie-list li {
     padding: 12px 24px;
     border-bottom: 1px solid #ddd;
 }
@@ -40,13 +40,15 @@ footer {
     background-color: #f8f9fa;
 }
 
-/* 龙猫图片 */
+
+/* 页脚图片 */
 .totoro {
     display: block;
     margin: 0 auto;
-    height: 100px;
+    height: 80px;
+    bottom:0px;
 }
-
+/* 导航栏 */
 nav ul {
     list-style-type: none;
     margin: 0;
@@ -72,21 +74,71 @@ nav li a:hover {
 }
 
 .photo{
- width: 20px;
- height: 30px;
+ width: 40px;
+ height: 60px;
 }
-
+/* 右对齐 */
 .float-right {
     float: right;
 }
 
+/* 豆瓣链接按钮 */
 .douban {
     font-size: 12px;
     font-weight: bold;
     color: black;
     text-decoration: none;
-    background: green;
+    background: #F5C518;
     border-radius: 5px;
     padding: 3px 5px;
-    float: right;
+}
+
+/* 输入 */
+input[type=submit] {
+    font-family: inherit;
+}
+
+input[type=file] {
+    font-family: inherit;
+    width: 80px;
+}
+
+input[type=text] {
+    border: 1px solid #ddd;
+    width: 80px;
+}
+
+/* 按钮 */
+.btn {
+    font-size: 12px;
+    display: inline-block;
+    padding: 2px 3px;
+    text-decoration: none;
+    cursor: pointer;
+    background-color: white;
+    color: black;
+    border: 1px solid #555555;
+    border-radius: 5px;
+}
+
+.btn:hover {
+    text-decoration: none;
+    background-color: black;
+    color: white;
+    border: 1px solid black;
+}
+
+.inline-form {
+    display: inline;
+}
+
+.alert {
+    position: relative;
+    padding: 7px;
+    margin: 7px 0;
+    border: 1px solid transparent;
+    color: #004085;
+    background-color: #cce5ff;
+    border-color: #b8daff;
+    border-radius: 5px;
 }
