--- a/movieLife/templates/base.html
+++ b/movieLife/templates/base.html
@@ -29,7 +29,7 @@
         </ul>
     </nav>
     {% if current_user.is_authenticated==False %}
-    <p>请登录或注册</p>
+    <p>请登录或注册，然后开启您的光影记录</p>
     {% endif %}
     {% block content %}{% endblock %}
     <footer>
