--- a/movieLife/templates/index.html
+++ b/movieLife/templates/index.html
@@ -25,7 +25,7 @@
                 <input class="btn" type="submit" name="delete" value="Delete" onclick="return confirm('Are you sure?')">
             </form>
             {% endif %}
-            <a class="douban" href="https://search.douban.com/movie/subject_search?search_text={{movie.name}}&cat=1002" target="_blank" title="Find this star on douban">Douban Link</a>
+            <a class="douban" href="https://search.douban.com/movie/subject_search?search_text={{movie.name}}&cat=1002" target="_blank" title="如果您需要图片，可以前往网络搜索">Douban Link</a>
         </span>
     </li>
     {% endfor %}
