--- a/movieLife/templates/login.html
+++ b/movieLife/templates/login.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h3>Login</h3>
-<form method="post">
-    Username<br>
-    <input type="text" name="username" required><br><br>
-    Password<br>
-    <!-- 密码输入框的 type 属性使用 password，会将输入值显示为圆点 -->
-    <input type="password" name="password" required><br><br>
-    <input class="btn" type="submit" name="submit" value="Submit">
-</form>
+<h3 class="center">欢迎登陆</h3>
+<div class="login-form">
+    <form method="post">
+        <input  type="text" name="username" placeholder="username" required>
+        <input  type="password" name="password" placeholder="password" required>
+        <input class="btn" type="submit" name="submit" value="登录">
+    </form>
+</div>
+
 {% endblock %}
