--- a/movieLife/templates/index.html
+++ b/movieLife/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 <form method="post" action="{{ url_for('add') }}" enctype="multipart/form-data">
     Name <input type="text" name="name" autocomplete="off" required>
-    Year <input type="text" name="year" autocomplete="off" required>
+    Year <input type="text" name="year" autocomplete="off">
     Image <input type="file" name="image" autocomplete="off">
     <input class="btn" type="submit" name="submit" value="Add">
 </form>
@@ -13,23 +13,27 @@
     {% for movie in movies %}
     <li>
         {% if movie.image %}
-            <img src="{{ url_for('static',filename=movie.image) }}" class="photo">
+            <img src="{{ movie.image }}" class="photo">
         {% else %}
             <img src="{{ url_for('static',filename='images/OIP.jpg') }}" class="photo">
         {% endif %}
-        {{ movie.name }} - {{ movie.year }}
+        {{ movie.title }} - {{ movie.year }}
         <span class="float-right">
             {% if current_user.is_authenticated %}
             <a class="btn" href="{{ url_for('edit', movie_id=movie.id) }}">Edit</a>
-            <form class="inline-form" method="post" action="{{ url_for('delete', movie_id=movie.id) }}">
-                <input class="btn" type="submit" name="delete" value="Delete" onclick="return confirm('Are you sure?')">
+            <form class="inline-form" method="post" action="{{ url_for('like', movie_id=movie.id) }}">
+                <input class="btn" type="submit" name="like" value="Like">
             </form>
             {% endif %}
-            <a class="douban" href="https://search.douban.com/movie/subject_search?search_text={{movie.name}}&cat=1002" target="_blank" title="如果您需要图片，可以前往网络搜索">Douban Link</a>
+            <a class="btn" href="{{ url_for('rec', movie_id=movie.id) }}">Recommend</a>
+            <a class="douban" href="https://search.douban.com/movie/subject_search?search_text={{movie.title}}&cat=1002" target="_blank" title="如果您需要图片，可以前往网络搜索">Douban Link</a>
         </span>
     </li>
     {% endfor %}
 </ul>
+{% for i in range(25) %}
+    <a href="/index?page={{ i }}">{{ i }}</a>
+{% endfor %}
 {% endif %}
 <img alt="Walking Totoro" class="totoro" src="{{ url_for('static', filename='images/harrypoter.gif') }}" title="to~to~ro~">
 {% endblock %}
