--- a/movieLife/static/css/style.css
+++ b/movieLife/static/css/style.css
@@ -142,3 +142,8 @@ input[type=text] {
     border-color: #b8daff;
     border-radius: 5px;
 }
+
+.page{
+    display: block;
+    text-align: center;
+}
