--- a/movieLife/templates/edit.html
+++ b/movieLife/templates/edit.html
@@ -1,9 +1,16 @@
 {% extends 'base.html' %}
 {% block content %}
-<h3>Edit item</h3>
-<form method="post">
-    Name <input type="text" name="title" autocomplete="off" required value="{{ movie.title }}">
-    Year <input type="text" name="year" autocomplete="off" required value="{{ movie.year }}">
-    <input class="btn" type="submit" name="submit" value="Update">
-</form>
+<div class="container">
+    <div class="row">
+        <div class="col-6">
+            <h3 style="margin: 5% auto">编辑电影信息</h3>
+            <form method="post">
+                电影名称 <input type="text" name="title" autocomplete="off" required value="{{ movie.title }}">
+                上映时间 <input type="text" name="year" autocomplete="off" required value="{{ movie.year }}">
+                <input class="btn btn-primary" type="submit" name="submit" value="更新" style="margin: 5% auto">
+            </form>
+        </div>
+        <div class="col-6"></div>
+    </div>
+</div>
 {% endblock %}
