--- a/movieLife/templates/results.html
+++ b/movieLife/templates/results.html
@@ -1,32 +1,34 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h3>Search Results</h3>
 {% if results != None %}
 
-    <p>{{ results.length }} Results </p>
-<ul class="movie-list">
-    {% for result in results %}
-    <li>
-        {% if result.image %}
-            <img src="{{ result.image }}" class="photo">
-        {% else %}
-            <img src="{{ url_for('static',filename='images/OIP.jpg') }}" class="photo">
+<div class="container" style="margin-top: 10px">
+    <div class="row">
+        <div class="col-12">
+          <h4>{{ results.length }} 查询结果 </h4>
+          <ul class="list-group list-group-flush">
+            {% for result in results %}
+            <li class="list-group-item" style="display: flex">
+                {% if result.image %}
+                    <a href="{{ url_for('detail', movie_id=result.id) }}"><img src="{{ result.image }}" style="width: 20%;height: 30%"></a>
+                {% else %}
+                    <img src="{{ url_for('static',filename='images/backup.jpg') }}" style="width: 20%;height: 30%">
+                {% endif %}
+                <div style="margin-left: 5%">
+                    <h4 style="margin-bottom: 4%;width: 800px">{{ result.title }}</h4>
+                    <p>{{ result.year }}</p>
+                    <span class="float-right">
+                        <a class="btn btn-primary" href="{{ url_for('detail',movie_id=result.id) }}">详情</a>
+                    </span>
+                </div>
+            </li>
+            {% endfor %}
+          {% else %}
+            <p>暂未查询到结果</p>
+          </ul>
         {% endif %}
-        {{ result.title }} - {{ result.year }}
-        <span class="float-right">
-            {% if current_user.is_authenticated %}
-            <a class="btn" href="{{ url_for('edit', movie_id=result.id) }}">Edit</a>
-
-            {% endif %}
-            <a class="btn" href="{{ url_for('rec', movie_id=result.id) }}">Recommend</a>
-            <a class="douban" href="https://search.douban.com/movie/subject_search?search_text={{result.title}}&cat=1002" target="_blank" title="如果您需要图片，可以前往网络搜索">Douban Link</a>
-        </span>
-    </li>
-    {% endfor %}
-{% else %}
-    <p>No Results</p>
-</ul>
-{% endif %}
-<img alt="Walking Totoro" class="totoro" src="{{ url_for('static', filename='images/harrypoter.gif') }}" title="to~to~ro~">
+        </div>
+    </div>
+</div>
 {% endblock %}
