--- a/movieLife/templates/recommend.html
+++ b/movieLife/templates/recommend.html
@@ -16,7 +16,7 @@
                         <h4 style="margin-bottom: 4%;width: 800px">{{ movie.title }}</h4>
                         <p>{{ movie.year }}</p>
                         <div style="margin-top: 18%">
-                            <a class="btn btn-primary" href="https://search.douban.com/movie/subject_search?search_text={{movie.title}}&cat=1002" target="_blank" title="如果您需要图片，可以前往网络搜索">前往豆瓣</a>
+                            <a class="btn btn-primary" href="{{ url_for('detail',movie_id=movie.id) }}">详情</a>
                         </div>
                     </div>
                 </li>
