fix: 1. like douban link fix 2. picture size at results.html

--- a/movieLife/templates/like.html
+++ b/movieLife/templates/like.html
@@ -16,7 +16,7 @@
                     <h4 style="margin-bottom: 4%;width: 800px">{{ movie.title }}</h4>
                     <p>{{ movie.year }}</p>
                     <span class="float-right">
-                        <a class="btn btn-primary" href="https://search.douban.com/movie/subject_search?search_text={{movie.name}}&cat=1002" target="_blank" title="如果您需要图片，可以前往网络搜索">前往豆瓣</a>
+                        <a class="btn btn-primary" href="https://search.douban.com/movie/subject_search?search_text={{movie.title}}&cat=1002" target="_blank" title="如果您需要图片，可以前往网络搜索">前往豆瓣</a>
                     </span>
                 </div>
             </li>
